// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colorized-text component empty color 1`] = `
<div
  class="colorized-text colorized-text_color_default"
/>
`;

exports[`colorized-text component green color 1`] = `
<div
  class="colorized-text colorized-text_color_green"
/>
`;
